; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_context.c_glfwSwapInterval.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_context.c_glfwSwapInterval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLFW_NO_CURRENT_CONTEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwSwapInterval(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @_GLFW_REQUIRE_INIT()
  %4 = call i32 (...) @_glfwPlatformGetCurrentContext()
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @GLFW_NO_CURRENT_CONTEXT, align 4
  %8 = call i32 @_glfwInputError(i32 %7, i32* null)
  br label %12

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @_glfwPlatformSwapInterval(i32 %10)
  br label %12

12:                                               ; preds = %9, %6
  ret void
}

declare dso_local i32 @_GLFW_REQUIRE_INIT(...) #1

declare dso_local i32 @_glfwPlatformGetCurrentContext(...) #1

declare dso_local i32 @_glfwInputError(i32, i32*) #1

declare dso_local i32 @_glfwPlatformSwapInterval(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
